--- a/.github/workflows/example-release.yml
+++ b/.github/workflows/example-release.yml
@@ -12,4 +12,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: Create a new release
         run: |
-          echo "${{ github.event.release }}"
+          echo "github.event.release.released: ${{ github.event.release.released }}"
+          echo "github.event.release.prereleased: ${{ github.event.release.prereleased }}"
